update cambios y pruebas

--- a/proyecto001/src/styles/Home.module.css
+++ b/proyecto001/src/styles/Home.module.css
@@ -6,7 +6,11 @@
   padding: 6rem;
   min-height: 100vh;
 }
-
+#reloj{
+  border: 2px solid blueviolet;
+  font-size: large;
+  height: 2rem;
+}
 .description {
   display: inherit;
   justify-content: inherit;
